--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -416,4 +416,5 @@
     <string name="gender">جنسیت</string>
     <string name="male">آقا</string>
     <string name="female">خانم</string>
+    <string name="balance">مانده</string>
 </resources>
