Modify Dashbard by format numbers and show list of buildings and show units instead of owners and tenants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,4 +434,5 @@
     <string name="insufficient_operational_fund_balance">موجودی صندوق جاری جهت ثبت فاکتور کافی نمی باشد.</string>
     <string name="no_owner_recorded">مالکی برای این ساختمان ثبت نشده است.</string>
     <string name="no_tenant_recorded">ساکنی برای این ساختمان ثبت نشده است.</string>
+    <string name="financial_dashboard">داشبورد مالی</string>
 </resources>
