--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -435,4 +435,5 @@
     <string name="no_owner_recorded">مالکی برای این ساختمان ثبت نشده است.</string>
     <string name="no_tenant_recorded">ساکنی برای این ساختمان ثبت نشده است.</string>
     <string name="financial_dashboard">داشبورد مالی</string>
+    <string name="display">نمایش</string>
 </resources>
