--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,4 +446,5 @@
     <string name="cost_insert_and_pending">ثبت هزینه با موفقیت انجام شد و در انتظار پرداخت کاربران می باشد.</string>
     <string name="insert_emergency_phone_book_successfully">ثبت تماس اضطراری با موفقیت انجام شد و در تب اضطراری قرار گرفت.</string>
     <string name="insert_phone_book_successfully">ثبت تماس ساکنین با موفقیت انجام شد و در تب ساکنین قرار گرفت.</string>
+    <string name="file_exeed">حداکثر اندازه فایل جهت بارگذاری</string>
 </resources>
