Edit Feature To Costs Documents and Pdf Report Feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="prompt_password">رمز</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="finance">دقت و شفافیت مالی</string>
     <string name="invalid_username">نام کاربری نامعتبر</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
@@ -49,7 +49,7 @@
     <string name="building_profile">پروفایل ساختمان</string>
     <string name="costs">هزینه ها</string>
     <string name="province">استان</string>
-    <string name="street">خیابان</string>
+    <string name="street">آدرس</string>
     <string name="addNew">" اضافه کردن"</string>
     <string name="state">شهر</string>
     <string name="back">قبلی</string>
@@ -85,14 +85,14 @@
     <string name="number_of_units">تعداد واحدها</string>
     <string name="number_of_owners">تعداد مالکین</string>
     <string name="overview">اطلاعات اولیه</string>
-    <string name="operation_funds">صندوق جاری</string>
+    <string name="operation_funds">حساب صندوق جاری</string>
     <string name="reports">گزارش</string>
     <string name="owners">مالکین</string>
     <string name="units">واحدها</string>
     <string name="incomes">درآمدها</string>
     <string name="no_earnings_recorded">هیچ درآمدی ثبت نشده است</string>
     <string name="no_costs_recorded">هیچ هزینه ای ثبت نشده است.</string>
-    <string name="tenants">ساکنین</string>
+    <string name="tenants">مستأجرین</string>
     <string name="rent">اجاره</string>
     <string name="utilities">قبوض</string>
     <string name="maintenance">تعمیرات</string>
@@ -148,7 +148,8 @@
     <string name="fixed_amount">مبلغ شارژ</string>
     <string name="setting">تنظیمات</string>
     <string name="upload">آپلود مدارک</string>
-    <string name="number_of_parking">پارکینگ</string>
+    <string name="number_of_parking">تعداد پارکینگ</string>
+    <string name="number_of_parking_for_each_unit">تعداد پارکینگ های هر واحد</string>
     <string name="delete_owner">حذف مالک</string>
     <string name="edit">ویرایش</string>
     <string name="edit_tenant">ویرایش ساکن</string>
@@ -156,7 +157,7 @@
     <string name="title">عنوان</string>
     <string name="add_costs">ثبت هزینه</string>
     <string name="add_income">ثبت درآمد</string>
-    <string name="due">تاریخ سررسید</string>
+    <string name="due">تاریخ</string>
     <string name="invoices">ثبت فاکتور</string>
     <!-- Persian Numbers -->
     <string name="zero_persian">صفر</string>
@@ -328,7 +329,7 @@
     <string name="select_type">نوع شماره</string>
     <string name="bilan_report">گزارش مالی(ارقام به میلیون تومان)</string>
     <string name="no_phone_recorded">هیچ تماسی ثبت نشده است.</string>
-    <string name="click_on_cost_columns">لطفا برای مشاهده جزئیات هزینه برای ستون ها کلیک کنید.</string>
+    <string name="click_on_cost_columns">لطفا برای مشاهده جزئیات هزینه روی ستون ها کلیک کنید.</string>
     <string name="other">سایر</string>
     <string name="cost_detail">"جزئیات "</string>
     <string name="select_role">انتخاب نقش</string>
@@ -337,7 +338,7 @@
     <string name="admin">مدیرسیستم</string>
     <string name="choose_role">انتخاب نقش</string>
     <string name="guest_user">کاربر مهمان</string>
-    <string name="guest_dialog_info">شما به عنوان کاربر مهمان وارد شده اید و \nتمامی این اطلاعات به صورت موفقت می باشد برای اینکه اطلاعات شما به صورت دائمی در سرور ذخیره شود لطفا ثبت نام کنید.</string>
+    <string name="guest_dialog_info">شما به عنوان کاربر مهمان وارد شده اید و \nتمامی این اطلاعات به صورت موقت می باشد برای اینکه اطلاعات شما به صورت دائمی در سرور ذخیره شود لطفا ثبت نام کنید.</string>
     <string name="confirm">تایید</string>
     <string name="create_notification">ایجاد نوتیفیکیشن</string>
     <string name="no_manager_notification">هیچ نوتیفیکیشنی از سمت مدیر ساختمان ثبت نشده است.</string>
@@ -366,7 +367,7 @@
     <string name="central_antenna">آنتن مرکزی</string>
     <string name="protection_system">سیستم های نظارتی/حفاظتی</string>
     <string name="net">هزینه های نگهداری</string>
-    <string name="charges_calculation">محاسبه شارژ سالیانه</string>
+    <string name="charges_calculation">محاسبه سالیانه شارژ جاری</string>
     <string name="no_data">اطلاعاتی برای نمایش وجود ندارد.</string>
     <string name="charge_method">روش محاسبه شارژ</string>
     <string name="fiscal_year">سال مالی</string>
@@ -375,9 +376,10 @@
     <string name="charge_calcualted_successfully">محاسبه شارژ با موفقیت انجام شد و در کارتابل مالکین و ساکنین قرار گرفت.</string>
     <string name="failed">عملیات با خطا مواجه شد.لطفا دوباره امتحان کنید.</string>
     <string name="this_year_charge_calculated">شارژمحاسبه شده</string>
-    <string name="number_of_warehouse">انباری</string>
+    <string name="number_of_warehouse">تعداد انباری</string>
+    <string name="number_of_warehouse_of_each_unit">تعداد انباری های هر واحد</string>
     <string name="unit_info">اطلاعات واحد</string>
-    <string name="capital_funds">صندوق عمرانی</string>
+    <string name="capital_funds">حساب صندوق عمرانی</string>
     <string name="operational">جاری</string>
     <string name="capital">عمرانی</string>
     <string name="no_capital_cost">هیچ هزینه عمرانی ثبت نشده است.</string>
@@ -386,8 +388,8 @@
     <string name="fund_type">نوع هزینه</string>
     <string name="transaction">تراکنش ها</string>
     <string name="no_transactions_recorded">هیچ تراکنشی ثبت نشده است.</string>
-    <string name="invoiced_succesfully">ثبت فاکتور با موفقیت انجام شد و در قسمت تراکنش ها قابل مشاهده می باشد.</string>
-    <string name="insufficient_fund_balance">موجودی صندوق عمرانی جهت ثبت فاکتور کافی نمی باشد.</string>
+    <string name="invoiced_succesfully">پرداخت با موفقیت انجام شد و در قسمت تراکنش ها قابل مشاهده می باشد.</string>
+    <string name="insufficient_fund_balance">موجودی صندوق عمرانی جهت پرداخت کافی نمی باشد.</string>
     <string name="no_earnings_pending">هیچ درآمدی ثبت نشده است.</string>
     <string name="fund_decreased_successfully">برداشت از صندوق انجام شد برای مشاهده جزئیات به تب تراکنش ها مراجعه فرمایید.</string>
     <string name="insufficient_fund">موجودی صندوق کافی نمی باشد.</string>
@@ -429,9 +431,9 @@
     <string name="receipt">دریافت شده</string>
     <string name="earning_name_exists">درآمد وارد شده تکراری است.</string>
     <string name="date">تاریخ</string>
-    <string name="transfer_to_operational">مبلغ دریافتی به صندوق جاری انتقال یافت.</string>
+    <string name="transfer_to_capital">مبلغ دریافتی به صندوق عمرانی انتقال یافت.</string>
     <string name="receipt_money">دریافت شود</string>
-    <string name="insufficient_operational_fund_balance">موجودی صندوق جاری جهت ثبت فاکتور کافی نمی باشد.</string>
+    <string name="insufficient_operational_fund_balance">موجودی صندوق جاری جهت پرداخت کافی نمی باشد.</string>
     <string name="no_owner_recorded">مالکی برای این ساختمان ثبت نشده است.</string>
     <string name="no_tenant_recorded">ساکنی برای این ساختمان ثبت نشده است.</string>
     <string name="financial_dashboard">داشبورد مالی</string>
@@ -447,7 +449,7 @@
     <string name="insert_emergency_phone_book_successfully">ثبت تماس اضطراری با موفقیت انجام شد و در تب اضطراری قرار گرفت.</string>
     <string name="insert_phone_book_successfully">ثبت تماس ساکنین با موفقیت انجام شد و در تب ساکنین قرار گرفت.</string>
     <string name="file_exeed">حداکثر اندازه فایل جهت بارگذاری</string>
-    <string name="capital_info">پیش بینی سالیانه هزینه عمرانی</string>
+    <string name="capital_info">بودجه سالیانه شارژ عمرانی</string>
     <string name="capital_info_insert">ثبت هزینه عمرانی</string>
     <string name="network_error">خطای شبکه</string>
     <string name="wrong_expired_code">کد نادرست/منقضی</string>
@@ -465,7 +467,7 @@
     <string name="login_user_not_found">حسابی با این شماره پیدا نشد. لطفاً ثبت‌نام کنید.</string>
     <string name="go_to_sign_up"> ثبت نام</string>
     <string name="finish">پایان</string>
-    <string name="invalid_post_code">کد پستی نامعتبر</string>
+    <string name="invalid_post_code">کد پستی معتبر 10 رقمی می باشد.</string>
     <string name="invalid_number_of_units">تعداداتاق ها نامعتبر</string>
     <string name="fill_required_fields">موارد الزامی پر شود.</string>
     <string name="insert_owner_successfully">ثبت مالک با موفقیت انجام شد.</string>
@@ -543,7 +545,7 @@
     <string name="current_costs">سایر هزینه های جاری</string>
     <string name="assign_new_role">اختصاص نقش جدید</string>
     <string name="role_name_required">انتخاب نام نقش الزامی است.</string>
-    <string name="role_required">انتخاب نش الزامی است.</string>
+    <string name="role_required">انتخاب نقش الزامی است.</string>
     <string name="building_required">انتخاب ساختمان الزامی است.</string>
     <string name="insert_mobile_for_access">جهت ثبت یا ویرایش دسترسی ها، شماره موبایل کاربر را وارد نمایید:</string>
 
@@ -556,5 +558,64 @@
     <string name="chat_manager_not_found">پیغامی یافت نشد.</string>
     <string name="chat_close">بستن </string>
     <string name="rental">رهن و اجاره</string>
+    <string name="cost_for">بابت</string>
+    <string name="cost_description">شرح هزینه</string>
+    <string name="document_number">شماره سند</string>
+    <string name="insert_capital_doc">ثبت سند عمرانی</string>
+    <string name="insert_operational_doc">ثبت سند جاری</string>
+    <string name="units_are_finished">تمامی واحدها دارای مالک می باشند.</string>
+    <string name="cost_insert_doc">ثبت سند با موفقیت انجام شد.</string>
+    <string name="sum">مجموع</string>
+    <string name="charge_will_replace_previous">این مبلغ جایگزین شارژ قبلی خواهد شد</string>
+    <string name="cannot_edit_charge_with_paid_debts">امکان ویرایش شارژ وجود ندارد، چون برای این سال پرداخت انجام شده است</string>
+    <string name="daily">روزانه</string>
+    <string name="select_units">انتخاب واحدها</string>
+    <string name="yes">بله</string>
+    <string name="none">خیر</string>
+    <string name="edit_disable_because_of_payment">امکان ویرایش وجود ندارد چون پرداخت انجام شده است.</string>
+    <string name="this_unit_has_resident_owner">برای این واحد یک مالکِ ساکن ثبت شده است.</string>
+    <string name="active_tenant_must_incluse_current_day">برای وضعیت فعال، بازه تاریخ باید شامل امروز باشد.</string>
+    <string name="active_tenant_already_exists_within_selected_period">در این بازه زمانی برای این واحد ساکن فعال دیگری وجود دارد.</string>
+    <string name="tenant_is_already_active_in_another_place">در بازه زمانی انتخاب‌شده این ساکن در واحد یا ساختمان دیگری به صورت فعال ثبت شده است.</string>
+    <string name="error_invalid_date_range">تاریخ انتخاب شده نامعتبر است.</string>
+    <string name="operational_charge_calculated_result">نتیجه محاسبه شارژ جاری(ماهیانه):</string>
+    <string name="capital_charge_calculated_result">نتیجه محاسبه شارژ عمرانی(سالیانه):</string>
+    <string name="cannot_delete_owner_with_active_tenant">حذف مالک به دلیل اینکه مستأجر فعال دارد امکان پذیر نیست.</string>
+    <string name="auth_profile_cancel">دسترسی شما جهت انتخاب آیتم مربوط به خودتان می باشد.</string>
+    <string name="easy_contact">هوشمندی در ارتباطات</string>
+    <string name="building_comfort">آسایش در ساختمان</string>
+    <string name="finance_description">ارائه اطلاعات مالی روشن،قابل اتکا و بدون ابهام.</string>
+    <string name="contact_description">مدیریت ارتباطات به صورت به موقع، هدفمند و در دسترس.</string>
+    <string name="building_description">مدیریت امور ساختمان به صورت منظم و کارآمد.</string>
+    <string name="no_manager_found">هیچ مدیری برای ساختمان ثبت نشده است.</string>
+    <string name="edit_operational_doc">ویرایش سند جاری</string>
+    <string name="edit_capital_doc">ویرایش سند عمرانی</string>
+    <string name="can_not_update_received_credits">امکان ویرایش این آیتم وجود ندارد.</string>
+    <string name="delete_earning">حذف درآمد</string>
+    <string name="edit_earning">ویرایش درآمد</string>
+    <string name="delete_document">حذف سند</string>
+    <string name="invalid_user_password">نام کاربری یا پسورد نامعتبر است.</string>
+    <string name="forget_password">فراموشی رمز عبور</string>
+    <string name="exist_user">این شماره موبایل قبلا در سیستم ثبت شده است.</string>
+    <string name="edit_password">تغییر رمز عبور</string>
+    <string name="old_password">رمز عبور فعلی</string>
+    <string name="new_password">رمز عبور جدید</string>
+    <string name="repeat_new_password">تکرار رمز عبور جدید</string>
+    <string name="wrong_password">رمز عبور وارد شده اشتباه است.</string>
+    <string name="passwords_not_match">رمز عبور جدید و تکرار آن تطابق ندارد.</string>
+    <string name="password_changed_success">رمز عبور شما با موفقیت تغییر یافت.</string>
+    <string name="invalid_old_password">رمز عبور فعلی اشتباه است.</string>
+    <string name="notifications">نوتیفیکیشن</string>
+    <string name="get_report">دریافت گزارش</string>
+    <string name="three_months">سه ماهه</string>
+    <string name="six_months">شش ماهه</string>
+    <string name="one_year">یک ساله</string>
+    <string name="date_range">انتخاب تاریخ</string>
+    <string name="open_pdf">pdf</string>
+    <string name="financial_report">گزارش مالی</string>
+    <string name="row">ردیف</string>
+    <string name="due_date">تاریخ سررسید</string>
+    <string name="payment_date">تاریخ پرداخت</string>
+    <string name="complete_user_info">تکمیل اطلاعات کاربری</string>
 
 </resources>
